[package]
name = "face_rec_dlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
build-native = ["dlib-face-recognition/build-native"]

[dependencies]
clap = {version = "4.4.10", features = ["derive"]}
dlib-face-recognition = {version = "0.3.2", features = ["embed-all"]}
image = "0.24.7"
rusqlite = "0.30.0"
bincode = "1.3.3"
serde = {version = "1.0.193", features = ["derive"]}
walkdir = "2.4.0"
progress_bar = "1.0.5"
rayon = "1.8.0"
once_cell = "1.18.0"